Fix T70606: 3D cursor oriented by geometry projects on objects displayed as bounds box and wire